[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/PopUp/Bidding.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/Bosk_32_1.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/PNG/UI/Menu/MiniMenu.png" type="Texture" id=3]
[ext_resource path="res://assets/Bosk.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/Theme/Login.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 62
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="BiddingTab" type="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0.7, 0.7 )
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -521.0
margin_top = -154.5
margin_bottom = 154.5
rect_min_size = Vector2( 400, 250 )
texture = ExtResource( 3 )

[node name="BiddingScreen" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 5.0
margin_right = -7.0
margin_bottom = -16.0

[node name="BidsButtons2" type="HBoxContainer" parent="Background/BiddingScreen"]
margin_right = 503.0
margin_bottom = 63.0
alignment = 1

[node name="Title" type="Label" parent="Background/BiddingScreen/BidsButtons2"]
margin_left = 22.0
margin_right = 346.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "Bidding war   "
align = 1

[node name="TimeLeft" type="Label" parent="Background/BiddingScreen/BidsButtons2"]
margin_left = 350.0
margin_right = 481.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "00:00"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Background/BiddingScreen"]
margin_top = 67.0
margin_right = 503.0
margin_bottom = 90.0
rect_min_size = Vector2( 80, 23 )

[node name="ShipName" type="Label" parent="Background/BiddingScreen"]
margin_top = 94.0
margin_right = 503.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
text = "\"ShipName\""
align = 1

[node name="ActualPrice" type="Label" parent="Background/BiddingScreen"]
margin_top = 161.0
margin_right = 503.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="BidsButtons" type="HBoxContainer" parent="Background/BiddingScreen"]
margin_top = 211.0
margin_right = 503.0
margin_bottom = 261.0
alignment = 1

[node name="Ten" type="Button" parent="Background/BiddingScreen/BidsButtons"]
margin_left = 29.0
margin_right = 249.0
margin_bottom = 50.0
rect_min_size = Vector2( 220, 50 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "10"

[node name="Hundred" type="Button" parent="Background/BiddingScreen/BidsButtons"]
margin_left = 253.0
margin_right = 473.0
margin_bottom = 50.0
rect_min_size = Vector2( 220, 50 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "100"

[node name="BidTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="Background/BiddingScreen/BidsButtons/Ten" to="." method="_on_Ten_pressed"]
[connection signal="pressed" from="Background/BiddingScreen/BidsButtons/Hundred" to="." method="_on_Hundred_pressed"]
[connection signal="timeout" from="BidTime" to="." method="_on_BidTime_timeout"]
